--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "firebase-functions": "^4.6.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0"
   },
