--- a/functions/package.json
+++ b/functions/package.json
@@ -14,10 +14,11 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0"
   },
